# gbrain

./: .gitignore  :  LICENSE  QUICKSTART.md  README.md  init_training_data.py  pyproject.toml  run_web.py
.github/workflows/: test.yml
data/uploads/: (中文008)从基础学习商务礼仪①.md  (中文009)从基础学习商务礼仪②.md  (中文010)从基础学习商务礼仪③.md  (中文011)从基础学习商务礼仪④.md  (中文012)从基础学习商务礼仪⑤.md  (中文013)从基础学习商务礼仪⑥.md  (中文014)从基础学习商务礼仪⑦.md  【人事总务科】商务礼仪培训.md  公有云亮点功能分享2023V1.0.md  公有云销售过程经验分享2023V1.0.md  契约锁公有云产品功能串联脚本2023V1.0.md  契约锁公有云产品功能清单.md  契约锁印章管理权限介绍2025V1.1.md  契约锁数字可信产品体系培训脚本.md  契约锁运维服务知识库.md  学习途径推荐2023V1.0.md  工作中各类流程处理指南2024V1.1.md  销售条线-契约锁销售打单导图.md  销售能力体系总结.md  长效证书相关说明.docx
docs/superpowers/plans/: 2026-04-23-learning-agent-implementation-plan.md  2026-04-24-content-integrator-semantic-enhancement.md  2026-04-24-digital-human-script-enhancement.md  2026-04-24-lecture-generation-plan.md
docs/superpowers/specs/: 2026-04-23-learning-agent-design.md  2026-04-23-training-agent-design.md  2026-04-24-course-generation-design.md  2026-04-24-digital-human-script-enhancement.md  2026-04-24-lecture-generation-enhancement-design.md
gbrain/: __init__.py  bm25_search.py  classifier.py  config.py  database.py  evolver.py  fusion.py  graph.py  mcp_server.py  models.py  vector_search.py
gbrain/plugins/: __init__.py
gbrain/plugins/training/: LearningAgent.md  __init__.py  __plugin__.py  chat_engine.py  course_gen.py  doc_converter.py  learning_agent.py  models.py  scene_generator.py  service.py
gbrain/plugins/training/skills/: __init__.py
gbrain/plugins/training/skills/exploration/: __init__.py  engine.py  models.py  prompts.py
gbrain/plugins/training/skills/lecture_generation/: __init__.py  builder.py  content_integrator.py  lecture_generator.py  models.py  prompt_parser.py  skill.yaml  validator.py
gbrain/plugins/training/skills/quiz/: __init__.py  engine.py  generator.py  models.py  prompts.py
gbrain/plugins/training/skills/scene_learning/: __init__.py  engine.py  generator.py  models.py  prompts.py  scene_generation_design.md
gbrain/web/: __init__.py  app.py  routes.py
gbrain/web/templates/: error.html
gbrain/web/templates/training/: admin.html  base.html  dashboard.html  home.html  learn.html  quiz_result.html  task_detail.html  tasks.html
tests/: test_gbrain.py
tests/plugins/training/skills/lecture_generation/: test_builder.py  test_content_integrator.py  test_e2e.py  test_lecture_generator.py  test_prompt_parser.py  test_validator.py
