[project]
name = "gbrain"
version = "0.1.0"
description = "AI Agent 记忆与知识管理系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GBrain Team"}
]
keywords = ["knowledge-base", "rag", "mcp", "ai-agent", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "networkx>=3.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/forxia/gbrain"
Documentation = "https://github.com/forxia/gbrain#readme"
Repository = "https://github.com/forxia/gbrain"
Issues = "https://github.com/forxia/gbrain/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gbrain*"]
